fixed particles are now called parcels

--- a/Euler.tex
+++ b/Euler.tex
@@ -188,6 +188,11 @@ We stress that this discussion applies to any field, even if they
 are vector fields
 (since it applies to each of its components, which are scalar).
 
+In a sense, the total derivative is the ``right one'' physically. Since
+Newton's equations of motion apply to fluid particles (and not fixed volume particles),
+it is the total derivative of the velocity that should be equated with the force (per mass),
+as will be discussed in Section \ref{sec:momentum_eq}.
+
 
 \subsection{The steady state}
 
@@ -308,6 +313,7 @@ The total volumetric force is then
 \]
 
 \section{The momentum equation}
+\label{sec:momentum_eq}
 
 A bold and quick way to reach Euler's momentum equation is to equate
 mass times acceleration with forces, in the spirit of Newton's Second
