--- a/Euler.tex
+++ b/Euler.tex
@@ -132,7 +132,7 @@ Monaghan: if $\nabla \cdot \bfu $ is the divergence,
 $ - \nabla \cdot \bfu $ could be called the convergence.
 
 We now see that incompressibility, defined as $\nabla \cdot \bfu = 0
-$, implies $d(\rho)/(dt) = 0$. This means that density is ``carried
+$, implies $d\rho/dt = 0$. This means that density is ``carried
 with the flow'', as explained in next session.
 
 \subsection{Physical meaning of the material derivative}
