--- a/creeping.tex
+++ b/creeping.tex
@@ -75,7 +75,8 @@ time scale, Reynolds number), we may gain some insight from the
 solution from Kolmogorov flow.
 
 This is an exact solution of the momentum equations when there is a
-periodic applied force in the $x$ direction that depends on $y$ only
+volumetric force applied in the $x$ direction that depends on $y$ only,
+periodically:
 \[
 \bff = f_0 \cos\left( \frac{2\pi y}{L} \right) \bfe_x .
 \]
