--- a/glossary.tex
+++ b/glossary.tex
@@ -13,7 +13,7 @@
 \glsxtrnewsymbol[description={material time derivative}]{materiald}{\ensuremath{\frac{d\cdot}{dt}}}
 \glsxtrnewsymbol[description={del operator}]{nabla}{\ensuremath{\nabla\cdot}}
 
-
+\glsxtrnewsymbol[description={generic field}]{A}{A}
 \glsxtrnewsymbol[description={velocity field}]{u}{\bfu}
 \glsxtrnewsymbol[description={typical velocity scale}]{u0}{\ensuremath{u_0}}
 \glsxtrnewsymbol[description={typical length scale}]{L}{\ensuremath{L}}
@@ -33,8 +33,8 @@
 \glsxtrnewsymbol[description={pressure}]{p}{$p$}
 \glsxtrnewsymbol[description={mass density}]{rho}{$\rho$}
 
-\glsxtrnewsymbol[description={mass of a particle}]{mass}{\ensuremath{m}}
-\glsxtrnewsymbol[description={volume of a particle}]{vol}{\ensuremath{V}}
+\glsxtrnewsymbol[description={mass of a particle/mass within a parcel}]{mass}{\ensuremath{m}}
+\glsxtrnewsymbol[description={volume of a particle/volume of a parcel}]{vol}{\ensuremath{V}}
 
 
 \glsxtrnewsymbol[description={shear (first) viscosity coefficient}]{mu}{$\mu$}
