--- a/defs.tex
+++ b/defs.tex
@@ -15,3 +15,4 @@
 \newcommand{\vort}{\ensuremath{\bm{\omega}}}
 \newcommand{\divu}{\ensuremath{\nabla\cdot\bfu}}
 \newcommand*{\tran}{\ensuremath{^{\mkern-1.5mu\mathsf{T}}}}
+\newcommand{\mathi}{\ensuremath{\iota}}
