--- a/fluid_mechanics.bib
+++ b/fluid_mechanics.bib
@@ -1,3 +1,30 @@
+@misc{noauthor_homework_nodate,
+	title = {homework and exercises - {Incompressible} {Navier}-{Stokes} equation in {Fourier} {Space} https://physics.stackexchange.com/questions/410475/incompressible-navier-stokes-equation-in-fourier-space},
+	url = {https://physics.stackexchange.com/questions/410475/incompressible-navier-stokes-equation-in-fourier-space},
+	urldate = {2022-01-10},
+	journal = {Physics Stack Exchange},
+	file = {Snapshot:/home/daniel/Zotero/storage/PCQ62LFS/incompressible-navier-stokes-equation-in-fourier-space.html:text/html},
+}
+
+@article{chatterjee_kolmogorov_2020,
+	title = {Kolmogorov flow: {Linear} stability and energy transfers in a minimal low-dimensional model},
+	volume = {30},
+	issn = {1054-1500},
+	shorttitle = {Kolmogorov flow},
+	url = {https://aip.scitation.org/doi/10.1063/5.0002751},
+	doi = {10.1063/5.0002751},
+	number = {7},
+	urldate = {2022-01-10},
+	journal = {Chaos: An Interdisciplinary Journal of Nonlinear Science},
+	author = {Chatterjee, Soumyadeep and Verma, Mahendra K.},
+	month = jul,
+	year = {2020},
+	note = {Publisher: American Institute of Physics},
+	pages = {073110},
+	file = {Submitted Version:/home/daniel/Zotero/storage/88HZ5J5G/Chatterjee and Verma - 2020 - Kolmogorov flow Linear stability and energy trans.pdf:application/pdf},
+}
+
+
 @book{feynman2011feynman,
   title={The Feynman Lectures on Physics, Vol. II: The New Millennium Edition: Mainly Electromagnetism and Matter},
   author={Feynman, R.P. and Leighton, R.B. and Sands, M.},
