--- a/fourier_space.tex
+++ b/fourier_space.tex
@@ -250,5 +250,5 @@ In component form,
 Notice the appearance of the operator \(  \delta_{ij} - k_i k_j  / k^2 \) in both the
 term coupling the velocities in different modes, and in the external force. In both cases,
 \(  \delta_{ij} \) represents a straight correspondence, while \(  - k_i k_j  / k^2 \)
-is a term brought about by the pressure.
+is a term brought about by the pressure. In vector form, $(\mathbf{k} /k^2 ) \mathbf{k} \cdot =  (\mathbf{k} /k)  (\mathbf{k}/k) \cdot = $ it is perhaps clearer that this term corresponds to a projection onto the direction of vector $\mathbf{k}$
 
