More stuff on aviation!

--- a/Euler.tex
+++ b/Euler.tex
@@ -252,7 +252,7 @@ the surface of the Earth, the force of gravity is constant and equal
 to $dm \bfg$, where $\bfg$ is a gravitational acceleration
 vector. This vector points ``down'' (usually, the $-z$ or $-y$
 direction, depending on our convention), and has a magnitude
-$g=\SI{9.8}{\meter\per\second\square}$. Its effect is given by
+$g=\SI{9.8}{\meter\per\second\squared}$. Its effect is given by
 Newton's Second law, according to which the net force on a particle
 with mass $dm$ is
 \[
