--- a/gravity_capillary_waves.tex
+++ b/gravity_capillary_waves.tex
@@ -330,7 +330,7 @@ The velocity is given by the factor
 \]
 
 For water and air in standard conditions,
-$\sigma=\SI{70}{\milli\joule\per\meter\square}$,
+$\sigma=\SI{70}{\milli\joule\per\meter\squared}$,
 and we find
 \[
   k_\mathrm{cross} = \SI{374}{\radian\per\meter} \implies
