elegant expressions for the lift

--- a/potential_flow.tex
+++ b/potential_flow.tex
@@ -549,11 +549,12 @@ the cylinder, after a Joukowsky transform. Eq. \eqref{eq:u_stag_cyl_pot_circ}
 then implies $\Gamma = - 4\pi R u_0 \sin(\theta_\text{st})$, hence
 Eq. \eqref{eq:lift_potential_cyl} yields
 \[
-\frac{L}{H} = -4\pi R \rho u_0^2 \sin(\theta_\text{st}) ,
+L = -4\pi R H  \rho u_0^2 \sin(\theta_\text{st}) =
+- 2 A  \rho u_0^2 \sin(\theta_\text{st}) .
 \]
-with the prediction that the lift force will increase quadratically with speed.
-The minus sign should not cause concern, since the angles are negative for
-positive circulation. Notice there is also a prediction of a maximum lift force,
+with the prediction that the lift force will increase quadratically with speed. In the last equality, we have written $A=2\pi R H$ for the total area of the cylinder, showing a typical result
+of a force being equal to the area times a pressure-like
+term. The minus sign should not cause concern, since the angles are negative for positive circulation. Notice there is even a prediction of a maximum lift force,
 when the sine has a value of $-1$, which is perhaps an indication of the
 stalling phenomenon (?).
 
@@ -579,11 +580,15 @@ and is only met when viscosity is introduced.
 
 The expression for the Magnus force is then,
 \[
-\frac{L}{H} = 2 \pi \rho u_0 \omega_0 R^2 ,
+L = 2 \pi R^2 H \rho u_0 \omega_0  =
+A \rho V_0   u_0
 \]
 proportional to both the wind speed $u_0$ and the angular
-velocity of the spinning cylinders, $\omega_0$ (of course, also
-proportional to their length). Since the force is perpendicular
+velocity of the spinning cylinders, $\omega_0$.
+In the last equality we have again introduced the area
+of the cylinder, while $V_0 := R \omega_0$ is the velocity
+of the cylinder surface.
+Since the force is perpendicular
 to the wind, the Magnus effect works best for wind coming
 from the sides (``abeam''). Also, this is the ``apparent wind'':
 the wind at the cylinders is the vector sum of the true
