some stuff on the deviatoric strain tensor

--- a/NS.tex
+++ b/NS.tex
@@ -391,6 +391,14 @@ introduced, the equation may be rearranged to read
   \right] +
   \nabla \cdot \left[ \eta (\divu) \eye \right] .
 \end{equation}
+In terms of the deviatoric rate of strain tensor of Eq.~\eqref{eq:deviatoric_rate_of_strain},
+\begin{equation}
+	\label{eq:pure_stress_pure_compressio2}
+	\bff_\mathrm{v}=
+	2 \nabla \cdot \left[ \mu \tilde{\epsilon} \right] +
+	\nabla \cdot \left[ \eta (\divu) \eye \right] .
+\end{equation}
+
 This expression is rather elegant, since the term multiplied by $\mu$
 describes pure shear flow, with no compression effects, and the term
 with $\eta$, pure compression.
