typos in potential flow around cylinder

--- a/potential_flow.tex
+++ b/potential_flow.tex
@@ -116,16 +116,16 @@ surface of the cylinder, but it turns out it may be so at some
 points. These are call stagnation points, because the liquid particles
 may be traped there for a long time.
 
-Also, the velocity modulus is
+Also, the velocity squared modulus is
 \[
-u = \sqrt{ u_r^2 + u_\theta^2}  ,
+u^2 = u_r^2 + u_\theta^2  ,
 \]
 which may be readily computed as
 \begin{equation*}
-u = u_0^2 
+u^2 = u_0^2 
 \left[
- 1 + \left( \frac{r}{R}\right)^4 -
- 2 \left( \frac{r}{R}\right)^2 \cos(2\theta) ,
+ 1 + \left( \frac{R}{r}\right)^4 -
+ 2 \left( \frac{R}{r}\right)^2 \cos(2\theta) ,
 \right]
 \end{equation*}
 where we have used $\cos(2\theta) =\cos^2(\theta)  - \sin^2(2\theta) $. In
